Apply Refaster rule for using String.formatted
There were only two cases where
https://github.com/google/error-prone/issues/4866 could be a problem,
these were checked and handled manually.
Any other instances of that bug would be detected by Error Prone,
which checks the number of format arguments.